fixed button spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -738,7 +738,8 @@ ul {
   background-color: #927bc1; }
 
 [class^='btn--'] {
-  margin: 1.25em 0.625em; }
+  margin-right: 2.5em;
+  width: 100%; }
 
 /*
 ////////////////////////////////////////////////////////////////////////////////
