--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -13,5 +13,7 @@
 
 // Column style
 [class^='btn--'] {
-  margin: em(20px) em(10px);
+  // margin-left: em(30px);
+  margin-right: em(40px);
+  width: 100%
 }
